--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,3 +1,14 @@
-<p>
-  profile works!
-</p>
+<ion-card>
+  <ion-item>
+    <ion-avatar aria-hidden="true" slot="start" style="width: 80px; height: 80px;">
+      <img alt="" [src]="avatarUrl" style="width: 100%; height: 100%;" />
+    </ion-avatar>
+    <ion-label>
+      <strong style="font-size: 25px;">{{username}}</strong>
+      <br>
+      <ion-note style="font-size: 18px;">{{points}}</ion-note>
+      <br>
+      <ion-icon name="add-circle-outline" style="font-size: 25px;"></ion-icon>
+    </ion-label>
+  </ion-item>
+</ion-card>
