--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,5 +7,5 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  
+  <app-profile [username]="profile[0].username" [points]="profile[0].points" [avatarUrl]="profile[0].avatarUrl"></app-profile>
 </ion-content>
