--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,18 @@
-<ion-header [translucent]="true">
+<app-header title="Logros"></app-header>
+
+<ion-content>
   <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-buttons slot="end">
+        <ion-button>
+            <ion-icon slot="icon-only" name="filter-circle-outline"></ion-icon>
+        </ion-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+        <ion-button>
+            <ion-icon slot="icon-only" name="swap-vertical-outline"></ion-icon>
+        </ion-button>
+    </ion-buttons>
+</ion-toolbar>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <app-item-archivement [usuario]="usuario" ></app-item-archivement>
 </ion-content>
