--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,11 +1,5 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="Perfil"></app-header>
 
 <ion-content [fullscreen]="true">
-  <app-profile [username]="profile[0].username" [points]="profile[0].points" [avatarUrl]="profile[0].avatarUrl"></app-profile>
+  <app-profile [usuario]="usuario"></app-profile>
 </ion-content>
