--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>¡Bienvenido!</ion-title>
+    <ion-title>¡Bienvenido!!</ion-title>
   </ion-toolbar>
 </ion-header>
 
