--- a/src/app/components/item-archivement/item-archivement.component.html
+++ b/src/app/components/item-archivement/item-archivement.component.html
@@ -1,5 +1,5 @@
 <ion-list>
-<ion-item lines="none" *ngFor="let juego of usuario?.videojuegos">
+<ion-item lines="none" button *ngFor="let juego of usuario?.videojuegos" (click)="abrirDetalles(juego)">
   <ion-thumbnail slot="start">
     <img src="../../../assets/icon/favicon.png" alt="Minecraft Icon" />
   </ion-thumbnail>
