--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -2,6 +2,7 @@
 
 <ion-content>
   <ion-toolbar>
+    <ion-button expand="block" style="width: 60%; margin-left: 20px;">Agregar juego</ion-button>
     <ion-buttons slot="end">
         <ion-button>
             <ion-icon slot="icon-only" name="filter-circle-outline"></ion-icon>
