feat: agregar componentes game, muestras los juegos en perfil

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -2,4 +2,5 @@
 
 <ion-content [fullscreen]="true">
   <app-profile [usuario]="usuario"></app-profile>
+  <app-games [usuario]="usuario"></app-games>
 </ion-content>
