--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar color="primary">
     <ion-title style="text-align: center;">{{title}}</ion-title>
     <ion-buttons slot="primary">
-      <ion-button (click)="navigateToLogin()">
+      <ion-button (click)="confirmLogout()">
         <ion-icon slot="icon-only" ios="log-out-outline" md="log-out-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
