Implementar diseño general de la aplicación

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar color="primary">
+  <ion-toolbar >
     <ion-title style="text-align: center;">{{title}}</ion-title>
     <ion-buttons slot="primary">
       <ion-button (click)="navigateToLogin()">
@@ -8,3 +8,4 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
