--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,11 +1,15 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+
+<ion-header class="ion-no-border">
+  <ion-toolbar >
     <ion-buttons slot="start">
       <ion-back-button default-href="/login"></ion-back-button>
     </ion-buttons>
-    <ion-title>Regístrate</ion-title>
+    <ion-title style="text-align: left;">Registro</ion-title>
+    <ion-buttons slot="primary">
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
 
 
 
