--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,8 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Bienvenido!</ion-title>
+<ion-header class="ion-no-border">
+  <ion-toolbar >
+    <ion-title style="text-align: center;">Bienvenido</ion-title>
+    <ion-buttons slot="primary">
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
