--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -19,14 +19,18 @@ ion-card {
   }
   
   ion-note {
-    color: #cecece;
+    color: #414141;
   }
   
   ion-icon {
-    color: #ffffff;
+    color: #000000;
     cursor: pointer;
   }
 
   .label-points{
     margin: 8px 0px 8px 0px;
+  }
+
+  strong{
+    color: #0e2a71;
   }
