--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,3 +1,9 @@
+ion-toolbar{
+  --background: #0e2a71;
+  --color: white;
+}
+
+
 .login-container {
   --background: hwb(0 100% 0%); // Fondo principal
   text-align: center;
